backends/drm: try other GPUs before falling back to software rendering

This provides a better default for the "primary" GPU on some systems

BUG: 441409