src/backends/drm/drm_egl_backend.h
@@ -63,7 +63,6 @@ public:
 
 private:
     bool initializeEgl();
-    bool initRenderingContext();
     EglDisplay *createEglDisplay(DrmGpu *gpu) const;
 
     DrmBackend *m_backend;
